--- a/assets/js/manifest.json
+++ b/assets/js/manifest.json
@@ -7,14 +7,14 @@
   "theme_color": "#000000",
  "icons": [
   {
-    "src": "../img/icons/icon-192.jpg",
+    "src": "../img/icons/icon-192.png",
     "sizes": "192x192",
-    "type": "image/jpeg"
+    "type": "image/png"
   },
   {
-    "src": "../img/icons/icon-512.jpg",
+    "src": "../img/icons/icon-512.png",
     "sizes": "512x512",
-    "type": "image/jpeg"
+    "type": "image/png"
   }
 ]
 
